Fix actionbtn cropping

--- a/packages/@uppy/status-bar/src/style.scss
+++ b/packages/@uppy/status-bar/src/style.scss
@@ -221,8 +221,7 @@
   display: inline-block;
   vertical-align: middle;
   font-size: 10px;
-  // margin-left: 6px;
-  // margin-right: 6px;
+  line-height: inherit;
   color: $blue;
 
   .uppy-size--md & {
